--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
 	"type": "module",
 	"dependencies": {
 		"date-fns": "^2.29.3",
+		"launchdarkly-js-client-sdk": "^3.1.0",
 		"parse-link-header": "^2.0.0",
 		"prism-themes": "^1.9.0",
 		"remark": "^14.0.2",
