--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
 		"@fontsource/fira-mono": "^4.5.10",
 		"@playwright/test": "^1.29.0",
 		"@sveltejs/adapter-auto": "1.0.0",
-		"@sveltejs/kit": "1.0.1",
+		"@sveltejs/kit": "^1.0.1",
 		"@tailwindcss/typography": "^0.5.8",
 		"@typescript-eslint/eslint-plugin": "^5.46.1",
 		"@typescript-eslint/parser": "^5.46.1",
